added "getURI()" method to Resource interface; added constructor with URI argument to UrlResource class; FileSystemResource's "getURL()" builds URLs that can be converted to an URI
git-svn-id: https://src.springframework.org/svn/spring-maintenance/trunk@14930 fd5a2b45-1f63-4059-99e9-3c7cb7fd75c8